--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "awesome-project",
+  "name": "ReactNativeApp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -8,12 +8,12 @@
   },
   "dependencies": {
     "react": "16.6.1",
-    "react-native": "0.57.5"
+    "react-native": "0.57.7"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
     "jest": "23.6.0",
-    "metro-react-native-babel-preset": "0.49.2",
+    "metro-react-native-babel-preset": "0.50.0",
     "react-test-renderer": "16.6.1"
   },
   "jest": {
